k8-setup/ecom-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-backend-deployment

spec:
  replicas: 2
  selector:
    matchLabels: 
      app: ecom-backend
        
  template:
    metadata:
      labels:
        app: ecom-backend

    spec:
      containers:
        - name: ecom-backend-pod
          image: shivamkumbhar05/shop-backend:v2
          ports:
            - containerPort: 8080
