k8-setup/ecom-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-frontend-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecom-frontend

  template:
    metadata:
      labels: 
        app: ecom-frontend

    spec:
      containers:
        - name: ecom-frontend-pod
          image: shivamkumbhar05/shop-frontend:v4
          ports:
            - containerPort: 80
