k8-setup/ecom-backend-service.yaml
apiVersion: v1

kind: Service

metadata: 
  name: ecom-backend-service

spec: 
  selector:
    app: ecom-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
    
  type: ClusterIP
