k8-setup/ecom-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ecom-ingress

spec:
  ingressClassName: nginx
  rules:
    - host: ecom.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ecom-backend-service
                port: 
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecom-frontend-service
                port: 
                  number: 80
